# crosswave-ai-adapter/src/main/kotlin/com/xxavierr404/crosswave/ai/adapter/controller/AiController.kt
@@ -2,7 +2,9 @@ package com.xxavierr404.crosswave.ai.adapter.controller
 
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
+import org.springframework.web.multipart.MultipartFile
 import org.xxavierr404.crosswave.music.api.apis.SuggestApiController
+import org.xxavierr404.crosswave.music.api.models.GenrePredictionDto
 import org.xxavierr404.crosswave.music.api.models.TrackInfo
 import org.xxavierr404.crosswave.music.api.models.UserProfileDto
 
@@ -14,5 +16,9 @@ class AiController : SuggestApiController() {
 
     override fun suggestUsers(xUserId: String): ResponseEntity<List<UserProfileDto>> {
         return super.suggestUsers(xUserId)
+    }
+
+    override fun predictGenre(file: MultipartFile): ResponseEntity<GenrePredictionDto> {
+        return super.predictGenre(file)
     }
 }
